# yournextgig

./: .gitignore  Dockerfile  README.md  yng.cabal
yng-backend/: Dockerfile  yng.cabal
yng-backend/src/: App.hs  Main.hs
yng-backend/src/Yng/: Routes.hs  Types.hs
yng-backend/src/Yng/Services/: GithubService.hs
yng-backend/static/: index.html  require-config.js
yng-backend/static/css/: your-next-gig-base.css
yng-backend/static/js/: app.jsx
yng-backend/static/lib/: json-over-http.js
yng-backend/test/: AppSpec.hs  TestHelper.hs
yng-backend/test/Yng/: RoutesSpec.hs
yng-backend/test/Yng/Services/: GithubServiceSpec.hs
yng-frontend/: Gruntfile.js  Gulpfile.js  index.html  package.json  require-config.js
yng-frontend/src/: index.html
yng-frontend/src/js/: app.jsx
yng-frontend/test/: app.qunit.js  index.html  test-main.js
