name:                your-next-gig
version:             0.1.0.0
synopsis:            Your next gig
description:         Your next gig
--license:             PublicDomain
--license-file:        LICENSE
author:              Karun Ramakrishnan <karun012@gmail.com>
author:              Hal Arnold <halarnold2000@yahoo.com>
maintainer:          karun012@gmail.com
maintainer:          halarnold2000@yahoo.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable yng
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       scotty,
                       bytestring,
                       text,
                       http-types,
                       github,
                       mtl,
                       wai,
                       transformers,
                       aeson
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  HS-Source-Dirs:      test, src
  build-depends:       base >=4.6 && <4.7,
                       QuickCheck,
                       hspec,
                       aeson,
                       bytestring,
                       mtl,
                       github,
                       wai,
                       wai-extra >=3,
                       HUnit,
                       scotty,
                       http-types,
                       transformers
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             Spec.hs
